--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,8 @@ body{background-image: url("/img/bg_wood.png");background-size: cover;}
 
 .light-square{background-color: rgb(255, 195, 140);height: 50px;width: 50px;background-size: contain;}
 .dark-square{background-color: rgb(124, 16, 16);height: 50px;width: 50px;background-size: contain;}
-#board>*{
-    outline: 0 solid lime;
+
+.highlight{
+    outline: 5px solid lime;
     outline-offset: -5px;
 }
