--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,9 @@
 @import 'tailwindcss';
 
 body{background-image: url("/img/bg_wood.png");background-size: cover;}
+
+#app{
+    height: 100vh;
+    width: 100vw;
+    padding: 1rem;
+}
