--- a/src/layout/in-game-layout.css
+++ b/src/layout/in-game-layout.css
@@ -1,13 +1,43 @@
 .in-game-layout{
-    height: 100vh;
-    width: 100vw;
-}
-
-@media screen and (orientation: potrait){
-
-.in-game-layout{
     display: flex;
-    flex-direction: column nowrap;
+    flex-flow: column nowrap;
+    gap: 1rem;
+    height: 100%;
+    width: 100%;
 }
+
+.player{
+    display: flex;
+    flex-direction: row;
+}
+
+@media screen and (orientation: landscape){
+
+    .player:first-child{
+        grid-area: player1;
+        display: flex;
+        flex-direction: column;
+    }
+    .player:nth-child(3){
+        grid-area: player2;
+        align-self: self-end;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .board{
+        grid-area: board;
+    }
+    .side-layout{
+        grid-area: side-layout;
+    }
+
+    .in-game-layout{
+        display: grid;
+        grid-template-areas:  'board player1 side-layout' 'board player2 side-layout';
+        width: fit-content;
+        height: 100%;
+        width: 100%;
+        gap: 1rem;
+    }
 
 }
